# temperature_notifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  temperature_notifier.sh
temperature_notifier/: algorithm.py  configuration.py  influxdb_service.py  notifications.py  notifiers.py  rolling_window.py  state_manager.py
temperature_notifier/notifiers/: __init__.py  base.py  home_assistant.py  simplepush.py
temperature_notifier/providers/: __init__.py  influxdb.py
